Ensure blue-box spans full width on mobile

--- a/Style.css
+++ b/Style.css
@@ -921,14 +921,12 @@ footer {
 
 @media (max-width: 768px) {
   .blue-box {
-    width: 100vw; /* Full screen width */
+    width: 100vw !important;
     position: relative;
     left: 50%;
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
-    padding-left: 0;
-    padding-right: 0;
     box-sizing: border-box;
   }
 }
